<resources>
    <string name="app_name">Surv!</string>
    <string name="loading_fragment">Just a sec..</string>

    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_password2">Password2</string>
    <string name="form_email">Email</string>
    <string name="form_pin">Pin</string>
    <string name="form_button">Sign in</string>

    <string name="user_addrpi">Add a new device!</string>
    <string name="user_alias">RPi name</string>
    <string name="user_location">Location</string>
    <string name="popup_img">Screenshot</string>
    <string name="popup_video">Stream</string>

    <string name="config_title">Config RPi</string>
    <string name="config_select_id">Select Pi id</string>
    <string name="config_title_group1">Misc</string>
    <string name="config_title_group2">Video</string>
    <string name="config_title_group3">Detection</string>

    <string name="config_group1_saveVideo">Save video</string>
    <string name="config_group1_timeRecording">Streaming time</string>
    <string name="config_group1_rotate">Rotate</string>

    <string name="config_group2_framerate">Fps</string>
    <string name="config_group2_bitrate">Bitrate</string>
    <string name="config_group2_resolution">Res</string>
    <string name="config_group2_extension">Extension</string>

    <string name="config_group3_model">Model</string>
    <string name="config_group3_weights">Weights</string>
    <string name="config_group3_class">Classes</string>
    <string name="config_group3_threshold">Threshold</string>
    <string name="config_submit">Submit</string>

</resources>