<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.AddRPiFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:text="@string/user_addrpi"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/alias"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_alias"
        android:translationX="10pt"
        android:translationY="30pt"
        android:drawableStart="@drawable/ic_user_rpi"
        android:drawablePadding="5pt" />

    <EditText
        android:id="@+id/location"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_location"
        android:drawableStart="@drawable/ic_user_location"
        android:drawablePadding="5pt"
        android:translationX="10pt"
        android:translationY="60pt" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_user_add"
        android:translationX="120pt"
        android:translationY="100pt"
        app:fabSize="normal" />

</FrameLayout>